--- a/package.json
+++ b/package.json
@@ -9,17 +9,53 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.23.1",
+    "@hookform/resolvers": "^3.1.1",
+    "@pinecone-database/pinecone": "^0.1.6",
+    "@prisma/client": "^5.0.0",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "@upstash/ratelimit": "^0.4.3",
+    "@upstash/redis": "^1.22.0",
+    "ai": "^2.1.31",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "langchain": "^0.0.121",
+    "lucide-react": "^0.263.1",
     "next": "13.4.12",
+    "next-cloudinary": "^4.16.3",
+    "next-themes": "^0.2.1",
+    "openai": "^3.3.0",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.27",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
+    "react-spinners": "^0.13.8",
+    "replicate": "^0.14.1",
+    "stripe": "^12.16.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.6",
+    "zod": "^3.21.4",
+    "zustand": "^4.4.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.0.0"
   }
 }
